# HUMANOID_ROBOTICS_AI_TEXTBOOK_

./: .env.example  README.md  TROUBLESHOOTING.md  agent.py  api_server.py  debug_qdrant.py  final_integration_test.py  main.py  pyproject.toml  requirement.txt  retrieve.py  test_agent.py  test_api_fix.py  test_api_metadata.py  test_backend_connection.html  test_fix.py  test_fix_simple.py  test_greeting_integration.py  test_greeting_simple.py  test_qdrant_connection.py  test_query_classification.py
.claude/: settings.local.json
ai_native_textbook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
history/prompts/001-embedding-pipeline/: 1-embedding-pipeline-setup-spec.spec.prompt.md  2-embedding-pipeline-plan.plan.prompt.md  3-embedding-pipeline-tasks.tasks.prompt.md  4-embedding-pipeline-phase1-implementation.tasks.prompt.md  5-embedding-pipeline-phase2-implementation.tasks.prompt.md  6-embedding-pipeline-phase3-implementation.tasks.prompt.md
history/prompts/001-rag-frontend-integration/: 001-rag-frontend-integration-spec.spec.prompt.md  002-rag-frontend-integration-plan.plan.prompt.md  (+7 more)
my-book/: docusaurus.config.ts
my-book/src/css/: custom.css  (+1 more)
specs/001-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-retrieval-pipeline-test/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-retrieval-agent/: data-model.md  quickstart.md  spec.md  tasks.md
(+37 files in other folders)
